Fixed Bug #81851: Week view timetable is too high

--- a/Resources/Public/v2/css/cal.css
+++ b/Resources/Public/v2/css/cal.css
@@ -533,7 +533,7 @@
 	padding:0;
 	font-size:11px;
 	line-height:normal;
-	height: 370px;
+	height: 357px;
 }
 
 .tx-cal-controller .scrolltime .timetable {
